# SNOT_lang

./: .gitignore  LICENSE  Makefile  README.md  param_storage.h  snot.l  snot.ypp  test.cpp
antlr4/: SNOT.g4
docker/: Dockerfile  build.sh  run.sh
lexyacc/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  configure.ac
lexyacc/examples/: README.md  example1.cpp  testprog.cpp
lexyacc/src/: .gitignore  CMakeLists.txt  Makefile  Makefile.am  Makefile.plain  param_storage.h  snot.lex.cpp  snot.lpp  snot.tab.cpp  snot.tab.hpp  snot.ypp  snot.yy.hpp
python/: snot.py
rsnot/: DESCRIPTION  NAMESPACE
rsnot/R/: rsnot-internal.R  rsnot.R
rsnot/man/: rsnot-package.Rd  snot_dump.Rd  snot_load.Rd  snot_populate.Rd  snot_traverse.Rd
